Adjusted logo text height on small screen, to fix issue when burger menu was pushed down to the left side below logo img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -421,6 +421,9 @@ footer h3, footer ul, footer p {
 
 @media screen and (max-width: 600px) {
 
+    .brand-name-container h1 {
+        font-size: 1.8em;
+    }
     /*----------------------------*/
     .jumbo--box {
         background-color: rgba(32, 83, 32, 0.9);
